--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -80,10 +80,10 @@
                     <div class="panel lightblue with-pie">
                         <h3>Projects per sector</h3>
                         <hr>
-                        <oipa-pie-chart group-by="sector" aggregation-key="count"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="sector" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                         <h3>Projects per programme</h3>
                         <hr>
-                        <oipa-pie-chart group-by="programme" aggregation-key="count"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="programme" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                     </div>
                      <div class="panel lightblue">
                         <h3>More information</h3>
