--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -72,7 +72,7 @@
                     <div class="panel lightblue with-pie">
                         <h3>Programmes linked to</h3>
                         <hr>
-                        <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="activity_status" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue">
                         <h3>Related videos</h3>
