--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -17,11 +17,11 @@
         <div class="panel lightblue clearfix no-padding-top no-margin-bottom">
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-3 chart">
-                    <oipa-pie-chart group-by="recipient_country" aggregation-key="count"></oipa-pie-chart>
+                    <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                     <h4>Project distribution</h4>
                 </div>
                 <div class="col-sm-3 chart">
-                    <oipa-pie-chart group-by="recipient_country" aggregation-key="incoming_fund"></oipa-pie-chart>
+                    <oipa-pie-chart group-by="recipient_country" aggregation-key="incoming_fund" aggregations="count,incoming_fund"></oipa-pie-chart>
                     <h4>Budget distribution</h4>
                 </div>
             </div>
