--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -51,10 +51,10 @@
                     <div class="panel lightblue with-pie">
                         <h3>Projects per sector</h3>
                         <hr>
-                        <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="activity_status" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                         <h3>Projects per programme</h3>
                         <hr>
-                        <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="activity_status" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue with-table">
                         <h3>Partner information</h3>
