--- a/templates/implementingOrganisations/implementing-organisations-view-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-view-list.html
@@ -4,7 +4,7 @@
         views="[{'id':'organisations', 'name': 'Bekijk lijst'}]"></filter-bar>
 
  	<countries-geo-map map-height='350px' map-legend='false' map-dropdown='false'></countries-geo-map>
-
+    <totals-bar update-on-init='true'></totals-bar>
     <implementing-organisations-list></implementing-organisations-list>
     
 </div>
