--- a/templates/locations/locations-view-map-list.html
+++ b/templates/locations/locations-view-map-list.html
@@ -10,7 +10,7 @@
             <!-- <locations-geo-map geo-view="vm.geoView" map-height="400px" map-legend='true' map-dropdown='false'></locations-geo-map> -->
 
             <country-list></country-list>
-            
+            <totals-bar update-on-init='true'></totals-bar>
             <region-list ng-show="vm.geoView == 'regions'"></region-list>
 
         </div>
