--- a/templates/programmes/programmes-view-list.html
+++ b/templates/programmes/programmes-view-list.html
@@ -3,7 +3,7 @@
     <filter-bar views="[{'id':'activities-list', 'name': 'Bekijk lijst'}, {'id':'activities', 'name': 'Bekijk op kaart & lijst'}]" current-page="activities"></filter-bar>
 
     <countries-geo-map map-height='350px'></countries-geo-map>
-    
+    <totals-bar update-on-init='true'></totals-bar>
     <programme-list></programme-list>
 
 </div>
