--- a/templates/sectors/sectors-view-list.html
+++ b/templates/sectors/sectors-view-list.html
@@ -19,6 +19,6 @@
     </div>
 
     <countries-geo-map map-height='350px' map-legend='false' map-dropdown='false'></countries-geo-map>
-
+    <totals-bar update-on-init='true'></totals-bar>
     <sector-list search-value="vm.sectorSearchValue"></sector-list>
 </div>
