--- a/templates/activities/activities-view-list-map.html
+++ b/templates/activities/activities-view-list-map.html
@@ -3,7 +3,7 @@
     <filter-bar views="[{'id':'activities', 'name': 'Map & list'}, {'id':'activities-list', 'name': 'List'}]" current-page="activities"></filter-bar>
 
     <countries-geo-map map-height='400px'></countries-geo-map>
-
+    <totals-bar update-on-init='true'></totals-bar>
     <activity-list></activity-list>
 
 </div>
