--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -36,7 +36,7 @@
                     <div class="white no-margin-bottom no-padding-bottom">
                         <h2>Goals & results</h2>
                     </div>
-                    <table class="finance">
+                    <table class="finance" ng-if="vm.activity.results.length != 0">
                         <thead>
                             <tr>
                                 <th>Goal</th>
@@ -46,7 +46,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="transaction in vm.transactionData">
+                            <tr ng-repeat="result in vm.results">
                                 <td>
                                     result title
                                 </td>
@@ -62,6 +62,9 @@
                             </tr>
                         </tbody>
                     </table>
+                    <div class="panel lightblue" ng-if="vm.activity.results.length == 0">
+                        No data avaiable yet
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <div class="panel with-table lightblue">
@@ -89,11 +92,11 @@
                         <table class="no-format">
                             <tr>
                                 <td>Start date:</td>
-                                <td>{{vm.start_actual ? vm.start_actual.iso_date : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
+                                <td>{{vm.activity.activity_dates[1].iso_date ? vm.activity.activity_dates[1].iso_date : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
                             </tr>
                             <tr>
                                 <td>End date:</td>
-                                <td>{{vm.end_actual ? vm.end_actual.iso_date : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
+                                <td>{{vm.activity.activity_dates[3].iso_date ? vm.activity.activity_dates[3].iso_date : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
                             </tr>
                             <tr>
                                 <td width="130">Sectors: </td>
@@ -103,7 +106,7 @@
                             </tr>
                             <tr>
                                 <td>Programme:</td>
-                                <td>XX</td>
+                                <td>{{vm.activity.related_activities[0].ref}}<span ng-if="!vm.activity.related_activities[0].ref">No data available yet</span></td>
                             </tr>
                             <tr>
                                 <td>Total budget: </td>
@@ -226,19 +229,19 @@
                         </tr>
                         <tr>
                             <td>Start date planned:</td>
-                            <td>{{vm.activity.start_date_planned ? vm.activity.start_date_planned : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
+                            <td>{{vm.activity.activity_dates[0].iso_date ? vm.activity.activity_dates[0].iso_date : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
                         </tr>
                         <tr>
                             <td>Start date actual:</td>
-                            <td>{{vm.activity.start_date_actual ? vm.activity.start_date_actual : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
+                            <td>{{vm.activity.activity_dates[1].iso_date ? vm.activity.activity_dates[1].iso_date : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
                         </tr>
                         <tr>
                             <td>End date planned:</td>
-                            <td>{{vm.activity.end_date_planned ? vm.activity.end_date_planned : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
+                            <td>{{vm.activity.activity_dates[2].iso_date ? vm.activity.activity_dates[2].iso_date : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
                         </tr>
                         <tr>
                             <td>End date actual:</td>
-                            <td>{{vm.activity.end_date_actual ? vm.activity.end_date_actual : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
+                            <td>{{vm.activity.activity_dates[3].iso_date ? vm.activity.activity_dates[3].iso_date : 'No data available yet' | date : 'dd-MM-yyyy'}}</td>
                         </tr>
                     </table>
                 </div>
@@ -250,20 +253,16 @@
 
                     <table class="no-format">
                         <tr>
-                            <td width="200">Related activity:</td>
-                            <td>XX</td>
+                            <td width="200">Related activity name:</td>
+                            <td>{{vm.activity.related_activities[0].name}}<span ng-if="!vm.activity.related_activities[0].name">No data available yet</span></td>
                         </tr>
                         <tr>
-                            <td>Related activity:</td>
-                            <td>XX</td>
+                            <td>Related activity ref:</td>
+                            <td>{{vm.activity.related_activities[0].ref}}<span ng-if="!vm.activity.related_activities[0].ref">No data available yet</span></td>
                         </tr>
                         <tr>
-                            <td>Related activity:</td>
-                            <td>XX</td>
-                        </tr>
-                        <tr>
-                            <td>Related IATI activity:</td>
-                            <td>XX</td>
+                            <td>Related activity type:</td>
+                            <td>{{vm.activity.related_activities[0].type.name}}<span ng-if="!vm.activity.related_activities[0].type.name">No data available yet</span></td>
                         </tr>
                     </table>
                 </div>
@@ -330,12 +329,12 @@
                                     <span ng-if="!country.region">-</span>
                                 </td>
                                 <td>
-                                    {{country.lat}}
-                                    <span ng-if="!country.lat">-</span>
+                                    {{country.latitude}}
+                                    <span ng-if="!country.latitude">-</span>
                                 </td>
                                 <td>
-                                    {{country.lon}}
-                                    <span ng-if="!country.lon">-</span>
+                                    {{country.longitude}}
+                                    <span ng-if="!country.longitude">-</span>
                                 </td>
                             </tr>
                         </tbody>
@@ -440,13 +439,12 @@
                         <hr>
                     </div>
 
-                     <table class="no-format">
+                     <table class="no-format" ng-if="vm.budgetLeft">
                         <tr>
-                            <td width="200">Budget spent:</td>
                             <td>
                                 <div class="progress small">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="vm.budgetLeft" aria-valuemin="0" aria-valuemax="100" ng-style="vm.progressStyle">
-                                     {{vm.budgetLeft}}% spent
+                                     {{vm.budgetLeft}}% of budget spent
                                     <div class="gradient"></div>
                                   </div>
                                 </div>
