--- a/templates/implementingOrganisations/implementing-organisations-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-list.html
@@ -32,15 +32,15 @@
         <tr>
             <th>Project partners</th>
             <th>Number of projects</th>
-            <th>Organisation type</th>
+            <!-- <th>Organisation type</th> -->
         </tr>
     </thead>
     <tbody>
         <tr
             ng-repeat="item in vm.organisations">
-            <td><a ui-sref="organisation({ organisation_id: item.name })">{{ item.name }}</a></td>
-            <td>{{item.count}}</td>
-            <td>TO DO: hide for 7 dec?</td>
+            <td><a ui-sref="organisation({ organisation_id: item.name })">{{ item.name }}<span ng-if="item.name == ''">Unknown</span></a></td>
+            <td>{{item.count}} projects</td>
+            <!-- <td>TO DO: hide for 7 dec?</td> -->
         </tr>
     </tbody>
 </table>
