--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -74,11 +74,10 @@
                     <select
                         ng-model="vm.order_by"
                         ng-change="vm.toggleOrder()">
-                        <option value="">Sort by...</option>
                         <option value="name">Name (A - Z)</option>
                         <option value="-name">Name (Z - A)</option>
-                        <option value="total_disbursements">Expenditure (increasing)</option>
-                        <option value="-total_disbursements">Expenditure (decreasing)</option>
+                        <option value="incoming_fund">Budget (increasing)</option>
+                        <option value="-incoming_fund">Budget (decreasing)</option>
                     </select>
                 </div>
                 <span class="results">Results: <span class="total">{{vm.totalSectors}}</span></span>
