added old map (not working yet), removed sort by options

--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -9,8 +9,8 @@
                           ng-change="vm.toggleOrder()">
                           <option value="title">Title (A-Z)</option>
                           <option value="-title">Title (Z-A)</option>
-                          <option value="start_actual">Starting date (increasing)</option>
-                          <option value="-start_actual">Starting date (decreasing)</option>
+                          <!-- <option value="start_actual">Starting date (increasing)</option>
+                          <option value="-start_actual">Starting date (decreasing)</option> -->
                           <option value="incoming_fund">Budget (increasing)</option>
                           <option value="-incoming_fund">Budget (decreasing)</option>
                         </select>
