name in project partners detail page

--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -7,7 +7,7 @@
     <div class="container extra">
 
         <div class="white no-margin-bottom">
-            <h1 class="no-margin-bottom">{{vm.organisation.name}}</h1>
+            <h1 class="no-margin-bottom">{{vm.organisation_id}}</h1>
         </div>
 
         <hr class="darkblue no-margin-bottom">
